--- a/Final Project/requirements.txt
+++ b/Final Project/requirements.txt
@@ -1,8 +1,18 @@
+accelerate==1.1.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.9
+aiosignal==1.3.1
+algebraic-value-editing==0.2.0
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
+appnope==0.1.4
+asttokens==2.4.1
+async-timeout==5.0.1
 attrs==24.2.0
+beartype==0.14.1
 bertviz==1.4.0
+better-abc==0.0.3
 blinker==1.9.0
 boto3==1.35.71
 botocore==1.35.71
@@ -10,37 +20,83 @@ cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
+comm==0.2.2
+commonmark==0.9.1
 contourpy==1.3.0
 cycler==0.12.1
+datasets==2.21.0
+debugpy==1.8.9
+decorator==5.1.1
+dill==0.3.8
+distro==1.9.0
+docker-pycreds==0.4.0
+einops==0.6.1
 exceptiongroup==1.2.2
+executing==2.1.0
+fancy-einsum==0.0.3
 fastapi==0.115.5
+fastjsonschema==2.21.1
 filelock==3.16.1
 fonttools==4.55.0
-fsspec==2024.10.0
+frozenlist==1.5.0
+fsspec==2024.6.1
+funcy==2.0
 gitdb==4.0.11
 GitPython==3.1.43
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.0
 huggingface-hub==0.26.3
 idna==3.10
+importlib_metadata==8.5.0
 importlib_resources==6.4.5
+IProgress==0.4
+ipykernel==6.29.5
+ipython==8.18.1
+ipywidgets==8.1.5
+jaxtyping==0.2.36
+jedi==0.19.2
 Jinja2==3.1.4
+jiter==0.8.0
 jmespath==1.0.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.13
 kiwisolver==1.4.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.9.2
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+mlx==0.21.0
+mlx-lm==0.20.1
 mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
 narwhals==1.14.3
+nbformat==5.10.4
+nest-asyncio==1.6.0
 networkx==3.2.1
-numpy==2.0.2
+numpy==1.26.4
+openai==1.56.2
 packaging==24.2
-pandas==2.2.3
+pandas==1.5.3
+parso==0.8.4
+pathtools==0.1.2
+pexpect==4.9.0
 pillow==11.0.0
+platformdirs==4.3.6
 plotly==5.24.1
-protobuf==5.29.0
+prettytable==3.12.0
+promise==2.3
+prompt_toolkit==3.0.48
+propcache==0.2.1
+protobuf==4.25.5
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyarrow==18.1.0
 pydantic==2.10.2
 pydantic_core==2.27.1
@@ -50,30 +106,42 @@ pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
+pyzmq==26.2.0
 referencing==0.35.1
 regex==2024.11.6
 requests==2.32.3
-rich==13.9.4
+rich==12.6.0
 rpds-py==0.21.0
 s3transfer==0.10.4
 safetensors==0.4.5
 sentencepiece==0.2.0
+sentry-sdk==2.19.0
+setproctitle==1.3.4
+shortuuid==1.0.13
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+stack-data==0.6.
 starlette==0.41.3
 streamlit==1.40.2
 sympy==1.13.1
 tenacity==9.0.0
 tokenizers==0.20.3
 toml==0.10.2
-torch==2.5.1
+torch==1.13.1
 tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
+transformer-lens==2.9.1
 transformers==4.46.3
+typeguard==4.4.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==1.26.20
 uvicorn==0.32.1
+wandb==0.13.5
+wcwidth==0.2.13
+widgetsnbextension==4.0.13
+xxhash==3.5.0
+yarl==1.18.3
 zipp==3.21.0
-ipython
