--- a/Final Project/requirements.txt
+++ b/Final Project/requirements.txt
@@ -120,7 +120,7 @@ shortuuid==1.0.13
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
-stack-data==0.6.
+stack-data==0.6.3
 starlette==0.41.3
 streamlit==1.40.2
 sympy==1.13.1
